<resources>
    <string name="app_name">THD Music</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Con Mèo</string>
    <string name="nav_header_subtitle">conmeo@gmail.com</string>

    <string name="simle">\n<p>&#x263A;&#x263A;&#x263A;</p></string>
    <string name="my_app_name">Danhtran12797</string>

    <string name="register_now"><u>Đăng ký tại đây</u></string>
    <string name="login_now"><u>Đăng nhập tại đây</u></string>
    <string name="email_id_user">Email: %s\nID: %s</string>
    <string name="title_activity_online">OnlineActivity</string>
    <string name="name_song_wecome">Welcome to...</string>

    <string name="no_internet_connect">Không có kết nối internet!</string>

    <string name="name_app_dialog">Tên: <b>THD Music</b></string>
    <string name="version_app">Phiên bản: <b>1.0</b></string>
    <string name="func_app">Chức năng: <b>Nghe nhạc online, offline</b></string>
    <string name="developer_by">Thực hiện bởi: <a href="https://www.facebook.com/danhtran12797"><b>danhtran12797</b></a> </string>
    <string name="contact_me_app">Email: <b>danhtran12797@gmail.com</b></string>

    <string name="infor_song">Tên: %s\nCa sĩ: %s\nLocation: %s\nNgày tải xuống: %s\nThời gian phát: %s\nThể loại: %s</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string-array name="arr_cycle">
        <item>vong2</item>
        <item>vong3</item>
        <item>vong4</item>
        <item>vong5</item>
        <item>vong6</item>
        <item>vong7</item>
        <item>vong8</item>
        <item>vong9</item>
        <item>vong10</item>
        <item>vong11</item>
    </string-array>

    <string-array name="lstFlower">
        <item>hoadao_144</item>
        <item>hoamai_144</item>
        <item>snow_144</item>
        <item>flower_blu_144</item>
        <item>hoahong_150</item>
        <item>hoaxanh_144</item>
        <item>flower_pink_144</item>
        <item>flower_144_red</item>
        <item>sunflower_144</item>
        <item>flower_cherry_144</item>
        <item>flower_hydrangea_144</item>
        <item>star</item>
    </string-array>


</resources>
